src/test/ui/underscore-lifetime/underscore-lifetime-binders.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/underscore-lifetime-binders.rs:4:8
   |
LL | fn foo<'_>
   |        ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/underscore-lifetime-binders.rs:10:25
   |
LL | fn meh() -> Box<dyn for<'_> Meh<'_>>
   |                         ^^ `'_` is a reserved lifetime name

error[E0106]: missing lifetime specifier
  --> $DIR/underscore-lifetime-binders.rs:2:17
   |
LL | struct Baz<'a>(&'_ &'a u8);
   |                 ^^ expected lifetime parameter

warning: lifetime parameter `'_` never used
  --> $DIR/underscore-lifetime-binders.rs:4:8
   |
LL | fn foo<'_>
   |       -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'a` never used
  --> $DIR/underscore-lifetime-binders.rs:7:11
   |
LL | trait Meh<'a> {}
   |          -^^- help: elide the unused lifetime

error[E0106]: missing lifetime specifier
  --> $DIR/underscore-lifetime-binders.rs:10:33
   |
LL | fn meh() -> Box<dyn for<'_> Meh<'_>>
   |                                 ^^ help: consider giving it a 'static lifetime: `'static`
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from

warning: lifetime parameter `'_` never used
  --> $DIR/underscore-lifetime-binders.rs:10:25
   |
LL | fn meh() -> Box<dyn for<'_> Meh<'_>>
   |                         ^^

error[E0106]: missing lifetime specifier
  --> $DIR/underscore-lifetime-binders.rs:16:35
   |
LL | fn foo2(_: &'_ u8, y: &'_ u8) -> &'_ u8 { y }
   |                                   ^^ expected lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from argument 1 or `y`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0106`.
